# staking-contract

./: .gitignore  Cargo.toml  README.md  deploy-devnet.interaction.json  upgrade-devnet.interaction.json
meta/: Cargo.toml
src/: elrond_staking.rs
tests/: elrond_staking_rust_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
