[package]
name = "staking-contract"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/elrond_staking.rs"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc]
version = "0.42.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.42.0"
