[package]
name = "staking-contract"
version = "0.0.0"
authors = [ "Hernan Abeldaño <hernan@dega.org>",]
edition = "2021"
publish = false

[lib]
path = "src/elrond_staking.rs"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dependencies.multiversx-sc]
version = "0.42.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.42.0"

[dependencies]
multiversx-sc-codec = "0.18.0"
